--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>EXAMPLE TITLE</title>
+    <title>josh's website</title>
   </head>
+
+  <body>
+    <h2>Hello World</h2>
+    <hr/>
+    <p>Welcome to my example html website, here are some <i><b style="color: BlueViolet;">flowers!</b></i></p>
+    
+  </body>
 
 </html>
