added links to pages

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>josh's website</title>
+    <title>Nature Poetry</title>
   </head>
 
   <body>
-    <h2>Hello World</h2>
+    <h1>Hello and welcome to my website</h1>
     <hr/>
-    <p>Welcome to my example html website, here are some <i><b style="color: BlueViolet;">flowers!</b></i></p>
-    
+    <p>Follow this link for the poem <a href="page2.html"><i><b style="color: Green;">trees</b></i></a></p>
+    <h2><a href="https://www.poetryfoundation.org/poems/44389/as-kingfishers-catch-fire"><i>As Kingfishers Catch Fire</i></a></h2>
+    <h3><a href="https://www.poetryfoundation.org/poems/44402/the-windhover"><i>The Windhover</i></a></h3>
+    <h4><a href="https://www.poetryfoundation.org/poets/gerard-manley-hopkins">Gerard Manley Hopkins</a></h4>
   </body>
 
 </html>
