--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,8 @@
     <p3>A tree that may in Summer wear<br/>A nest of robins in her hair;</p3>
     <p4>Upon whose bosom snow has lain;<br/>Who intimately lives with rain.</p4>
     <p5>Poems are made by fools like me,<br/>But only God can make a tree.</p5>
-    
+    <hr/>
+    <a href="index.html">home page</a>
   </body>
 
 </html>
