--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nature Poetry</title>
+    <title>Nature</title>
+    <img src="pictures/poetry.jpg" alt="poetry">
   </head>
 
   <body>
