--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
 
   <body>
     <h2><i>Trees</i> by Joyce Kilmer</h2>
+    <img src="pictures/tree.jpg" alt="tree">
     <hr/>
     <p>I think that I shall never see<br/>A poem lovely as a tree.</p>
     <p1>A tree whose hungry mouth is prest<br/>Against the earth's sweet flowing breast;</p1>
