fixed syntax error

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Nature</title>
-    <img src="pictures/poetry.jpg" alt="poetry">
+    <img src="/pictures/poetry.jpg" alt="poetry">
   </head>
 
   <body>
