--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Nature</title>
-    <img src="/pictures/poetry.jpg" alt="poetry">
   </head>
 
   <body>
     <h1>Hello and welcome to my website</h1>
+    <img src="https://i1.sndcdn.com/avatars-000325709723-h88nkl-t500x500.jpg" alt="poetry">
     <hr/>
     <p>Follow this link for the poem <a href="page2.html"><i><b style="color: Green;">trees</b></i></a></p>
     <h2><a href="https://www.poetryfoundation.org/poems/44389/as-kingfishers-catch-fire"><i>As Kingfishers Catch Fire</i></a></h2>
