fixed picture bugs

--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
 
   <body>
     <h2><i>Trees</i> by Joyce Kilmer</h2>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Ash_Tree_-_geograph.org.uk_-_590710.jpg" alt="tree">
+    <img src="tree.jpg" alt="tree" style="width:350px;height:400px;">
     <hr/>
     <p>I think that I shall never see<br/>A poem lovely as a tree.</p>
     <p1>A tree whose hungry mouth is prest<br/>Against the earth's sweet flowing breast;</p1>
