switched to separate css file and added designated picture folder

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Nature</title>
+    <link rel="sytlesheet" type="text/css" href="styles.css">
+      
   </head>
 
+
   <body>
-    <h1>Hello and welcome to my website</h1>
+    <h1>Poetry of the World</h1>
     <img src="poetry.jpg" alt="poetry" style="width:350px;height:400px;">
     <hr/>
+
+    <ul>
+      <li><a1 href="index.html">Home</a1></li>
+      <li><a1 href="index.html">Poetry</a1></li>
+    </ul>
+
     <p>Follow this link for the poem <a href="page2.html"><i><b style="color: Green;">trees</b></i></a></p>
     <h2><a href="https://www.poetryfoundation.org/poems/44389/as-kingfishers-catch-fire"><i>As Kingfishers Catch Fire</i></a></h2>
     <h3><a href="https://www.poetryfoundation.org/poems/44402/the-windhover"><i>The Windhover</i></a></h3>
