--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <title>Nature</title>
+    
     <meta charset="UTF-8">
-    <title>Nature</title>
-    <link rel="sytlesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
       
   </head>
 
 
   <body>
     <h1>Poetry of the World</h1>
-    <img src="poetry.jpg" alt="poetry" style="width:350px;height:400px;">
+    <img src="pics/poetry.jpg" alt="poetry" style="width:350px;height:400px;">
     <hr/>
 
     <ul>
